# Launcher

./: .gitignore  CLAUDE.md  deploy.sh  dev.sh  docker-compose.yml
.github/workflows/: build-windows-anticheat.yml  build-windows-launcher.yml
anticheat-agent/: MANIFEST.MF  build.sh  test.sh
anticheat-agent/src/main/java/xyz/projectminecraft/anticheat/: Agent.java
anticheat-agent/test/xyz/projectminecraft/anticheat/: AgentResilienceTest.java
anticheat-native/: CMakeLists.txt  README.md  build-win.sh  build.sh
anticheat-native/include/win32/: jni_md.h
anticheat-native/src/: agent.c  agent.h  guard.c  sha256.h
anticheat-neoforge/: README.md  build.gradle  gradle.properties  proguard-rules.pro  settings.gradle
anticheat-neoforge/src/main/java/xyz/projectminecraft/anticheat/p5/: P5ClientHandler.java  P5Config.java  P5Crypto.java  P5Mod.java  P5Payloads.java  P5ServerHandler.java
backend/: .env.example  Dockerfile  go.mod  go.sum
backend/cmd/bot/: main.go
backend/cmd/server/: main.go
backend/cmd/updatesign/: main.go
backend/internal/anticheat/: confidence_test.go  handler.go  hash_test.go  hwid_fuzzy_test.go  integration_test.go  manifest.go  manifest_test.go  matchtype_test.go  notify.go  p5.go  p5_test.go  policy_gate_test.go  ratelimit.go  review_test.go  screenshot.go  screenshot_test.go  service.go  service_test.go  stats_test.go  stringlit_test.go  token.go  token_test.go  version_gate_test.go
backend/internal/auth/: local_provider.go  local_provider_test.go  middleware.go  middleware_test.go  provider.go  service.go
backend/internal/bot/: account.go  admin.go  admin_test.go  callbacks.go  callbacks_test.go  commands.go  lifecycle.go  link.go  menu.go  menu_test.go  policy_test.go  pwdreset.go  register.go  service.go  support.go  totp.go
backend/internal/botconfig/: config.go
backend/internal/config/: config.go  config_test.go
backend/internal/database/: database.go
backend/internal/launcherrelease/: handler.go  handler_test.go  page.go  page_test.go  service.go  service_test.go  version.go  version_test.go
backend/internal/middleware/: cors.go
backend/internal/models/: anticheat.go  bot.go  launcher_release.go  policy_consent.go  user.go
backend/internal/policy/: handler.go  handler_test.go  privacy.md  rules.md  service.go  service_test.go
backend/internal/profiles/: handler.go  launch_command.go  service.go  service_test.go
backend/internal/repo/: admin.go  integration_test.go  repo.go  support_test.go
backend/internal/telegram/: inline.go  inline_test.go  raw.go
backend/internal/yggdrasil/: flow_test.go  handler.go  handler_test.go  keys.go  service.go  store.go
dashboard/app/: page.tsx  template.tsx
dashboard/app/anticheat/: page.tsx
dashboard/app/lib/: api.ts  types.ts  use-sse.ts
dashboard/app/login/: page.tsx
dashboard/app/news/: page.tsx
dashboard/app/profiles/: page.tsx
dashboard/app/users/: page.tsx
dashboard/components/anticheat/: bans-tab.tsx  detections-tab.tsx  screenshot-gallery.tsx  screenshot-viewer.tsx  screenshots-tab.tsx  signatures-tab.tsx  stats-tab.tsx  use-screenshot-image.ts
dashboard/components/overview/: events-feed.tsx  stats-row.tsx
dashboard/components/profiles/: client-flow.tsx  helpers.ts  profile-editor-sections.tsx  profile-editor.tsx  profile-list.tsx
dashboard/components/releases/: release-form.tsx
dashboard/components/shell/: command-palette.tsx
dashboard/components/users/: user-detail-panel.tsx  users-table.tsx
docs/: anticheat-deploy.md  vps-production.md
docs/superpowers/plans/: 2026-06-10-dashboard-redesign.md  2026-06-23-anticheat-launcher-refactor.md  2026-06-23-discord-rpc.md  2026-07-03-bot-inline-menu.md  2026-07-03-screenshots-ui.md  2026-07-04-privacy-policy.md
docs/superpowers/specs/: 2026-06-11-launcher-autoupdate-design.md  2026-06-15-session-keepalive-design.md  2026-06-23-anticheat-launcher-refactor-design.md  2026-06-23-discord-rpc-design.md  2026-07-03-bot-inline-menu-design.md  2026-07-03-screenshots-ui-design.md  2026-07-04-privacy-policy-design.md
launcher-slint/: Cargo.toml  build.rs
launcher-slint/src/: artifacts.rs  discord_rpc.rs  gpu.rs  main.rs  updater.rs
launcher-slint/src/anticheat/: agents.rs  handshake.rs  hwid.rs  inject.rs  kick.rs  manifest.rs  mod.rs  scan.rs  screenshot.rs  selfdebug.rs
launcher-slint/ui/: app.slint
scripts/prod/: backup-db.sh  build-player-launcher.sh  seed-antidebug-signatures.sql
