[package]
name = "launcher-slint"
version = "0.3.5"
edition = "2021"
build = "build.rs"

[dependencies]
directories = "6"
discord-rich-presence = "1.1"
keyring = "3"
rayon = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
slint = "1.16.1"

[build-dependencies]
slint-build = "1.16.1"
