[package]
name = "launcher-slint"
version = "0.4.3"
edition = "2021"
build = "build.rs"

[dependencies]
directories = "6"
discord-rich-presence = "1.1"
keyring = "3"
rayon = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls-webpki-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
# Проверка подписи автообновления (публичный ключ вшивается при сборке).
ed25519-dalek = "2"
hex = "0.4"
slint = "1.16.1"

# Захват экрана для скриншотов античита (запрос от админа через бэкенд).
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = ["Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Diagnostics_Debug"] }

[build-dependencies]
slint-build = "1.16.1"
winresource = "0.1"
